# compo-plus

./: package-lock.json  package.json
.github/workflows/: build.yml
src/: alerts.js  app.js  excel.js  index.html  index_indiv.html  main.js
src-tauri/: 2  Cargo.toml  tauri.conf - Copie.json  tauri.conf - perso.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons_perso/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: app.js
