[package]
name = "compo-ecole"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "compo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
sha2 = "0.10"
hex = "0.4"
machineid-rs = "1"
tauri-plugin-http = "2"

# Traitement d’image
image = "0.24"
base64 = "0.21"


# Cache global
once_cell = "1"
